# dicom-data-reader

cxx/: CMakeLists.txt  ReadDICOMSeries.cxx
python/: imageSlicing.py  readContour.py  readDICOMSeries.py  readPydicom.py  readVTK.py
